--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "name": "NovusTheory",
     "email": "novustheory@gmail.com"
   },
-  "license": "MIT",
+  "license": "GPLV3",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.4",
     "@electron-forge/maker-deb": "^6.0.4",
@@ -43,7 +43,10 @@
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
+    "fastify": "^4.11.0",
+    "fastify-socket.io": "^4.0.0",
     "material-symbols": "^0.4.2",
+    "socket.io": "^4.5.4",
     "vue": "^3.2.45"
   }
 }
