--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
     "@electron-forge/plugin-webpack": "^6.0.4",
+    "@types/discord-rpc": "^4.0.3",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -42,6 +43,7 @@
     "vue-template-compiler": "^2.7.14"
   },
   "dependencies": {
+    "discord-rpc": "^4.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
     "fastify": "^4.11.0",
